--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,13 +7,20 @@
 			{% endblock %}
 		</title>
         <!-- logo dans l'onglet des navigateurs -->
-        <link rel="icon" type="image/png" sizes="16x16" href="/images/pix.jpg">
+        <link rel="icon" type="image/png" sizes="16x16" href="/images/logo/pix.png">
 		<!-- CSS only -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+		<href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- JavaScript Bundle with Popper -->
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" defer></script>
-        {% block stylesheets %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" defer></script>
+        {% block stylesheets %}
+			<link rel="stylesheet" href="{{ asset('css/general.css') }}" type="text/css"/>
+			<!-- ce tags il va automatiquement compiler le css qui fait référence au app.css -->
+			{{ encore_entry_link_tags('app') }}
+		{% endblock %}
+        {% block javascripts %}
+			<!-- ce tags il va automatiquement compiler le css qui fait référence au app.js -->
+			{{ encore_entry_script_tags('app') }}
+		{% endblock %}
 	</head>
 	<body>
 
