--- a/templates/base/nav.html.twig
+++ b/templates/base/nav.html.twig
@@ -1,66 +1,70 @@
 <header>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<div class="container-fluid">
-			
-			<a class="navbar-brand" href="{# {{path('acceuil')}} #}"><img id='logo' src="/images/pixphoto.jpg" alt="logo"></a>
+	<div class="container-fluid">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<a class="navbar-brand" href="{# {{path('acceuil')}} #}"><img id='logo' src="/images/logo/pixphoto.png" alt="logo"></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">Lien</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Déco-murale</a>
-					</li>
-
-
+					
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 							Tirage photo
 						</a>
 						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<li>
-								<a class="dropdown-item" href="#">Tirage photo format standard</a>
-							</li>
-							<li>
-								<a class="dropdown-item" href="#">Agrandissement photo</a>
-							</li>
+							<li><a class="dropdown-item" href="#">Tirage Standard</a></li>
+							<li><a class="dropdown-item" href="#">Tirage Identité</a></li>
 							<li><hr class="dropdown-divider"></li>
-							<li>
-								<a class="dropdown-item" href="#">Tirage photo identité</a>
-							</li>
+							<li><a class="dropdown-item" href="#">Tirage Grande Quantité</a></li>	
 						</ul>
 					</li>
 
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							Déco-murale
+							Agrandissement
 						</a>
 						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<li>
-								<a class="dropdown-item" href="#">Action</a>
-							</li>
-							<li>
-								<a class="dropdown-item" href="#">Another action</a>
-							</li>
-							<li><hr class="dropdown-divider"></li>
-							<li>
-								<a class="dropdown-item" href="#">Something else here</a>
-							</li>
+							<li><a class="dropdown-item" href="#">Papier photo</a></li>
+							<li><a class="dropdown-item" href="#">Toile</a></li>
+							<li><a class="dropdown-item" href="#">Vinyle</a></li>
+							<li><a class="dropdown-item" href="#">Papier peint</a></li>
+							<li><a class="dropdown-item" href="#">Bach</a></li>	
 						</ul>
 					</li>
 
-					<li class="nav-item">
-						<a class="nav-link disabled">Bon plan</a>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Déco murale
+						</a>
+						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<li><a class="dropdown-item" href="#">Photo dans cadre photo</a></li>
+							<li><a class="dropdown-item" href="#">Photo sur bois mdf</a></li>	
+							<li><a class="dropdown-item" href="#">Photo sur toile</a></li>
+						</ul>
 					</li>
+
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Cadeaux personalisés
+						</a>
+						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<li><a class="dropdown-item" href="#">Textile</a></li>
+							<li><a class="dropdown-item" href="#">Mugs personalisés</a></li>
+							<li><a class="dropdown-item" href="#">Tasse magique</a></li>
+						</ul>
+					</li>
+					{% if app.user %}
+						<li class="nav-item">
+							<a class="nav-link" href="{{path('app_logout')}}">Déconnexion</a>
+						</li>
+						{% else %}
+						<li class="nav-item">
+							<a class="nav-link" href="{{path('app_login')}}">Connexion</a>
+						</li>
+					{% endif %}
 				</ul>
-				<form class="d-flex">
-					<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-					<button class="btn btn-outline-success lift" type="submit">Search</button>
-				</form>
 			</div>
 		</div>
 	</nav>
